@@ -11,6 +11,8 @@ Changes in @NEW@:
       when available (which it is for any not-incredibly-old server) instead
       of merging differential trove info with database trove info for a
       significant speedup of update planning.
+    * Database operations now use the TRUNCATE command where available,
+      which may speed up some repository queries.
 
   o Bug Fixes:
     * A consistent exception is now raised when bad XML-RPC data is fed
